--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+
+* {
+  color: white;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+	scroll-behavior: smooth;
+  background-color: rgb(107, 116, 130)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
+
+h1 {
+  font-size: 50px;
+  line-height: 50px;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+p {
+  font-size: 18px;
+}
+
+li {
+  font-size: 16px;
+}
+
+span {
+  font-size: 14px;
+  font-weight: 300;
+  white-space: nowrap;
+}
+
+.gradient-wave {
+  background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(255,175,117,1) 16%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, rgba(255,155,239,1) 95%);;
+  background-size: 4000%;
+  animation: bg-animation 40s linear infinite;
+}
+
+@keyframes bg-animation {
+  0% {
+    background-position-x: left
+  }
+
+  100% {
+    background-position-x: right
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.link {
+  text-decoration: none;
+}
+
+.page-background {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: calc(100vh + 40px);
+  border-radius: 0px 0px 40px 40px;
+  padding-bottom: 40px;
+  margin-bottom: 100px;
+  box-shadow: 0 2px 4px 2px rgba(0, 0, 0, .2);
+}
+
+.page-content {
+  width: 100vw;
+  min-height: calc(100vh - 90px);
+  padding: 0px 25px;
+}
+
+.flexbox {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.flexbox-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.flexbox-row {
+  display: flex;
+  align-items: center;
+}
+
+.flex-start {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.full-width {
+  width: 100%
+}
+
+.img-border {
+  border-radius: 25px;
+}
+
+.shadow-1 {
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
+
+.shadow-2 {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
