--- a/src/components/ui/ScrollButton.css
+++ b/src/components/ui/ScrollButton.css
@@ -9,14 +9,14 @@
   width: 50px;
 	height: 50px;
 	cursor: pointer;
-	background-color: white;
-	border: none;
+	background-color: transparent;
+	border: 5px solid white;
 	border-radius: 50%;
 	transition: 200ms;
 }
 
 .top-button svg {
-	fill: rgb(107, 116, 130);
+	fill: white;
 	width: 20px;
 	height: 20px;
 	position: absolute;
