--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,8 @@ span {
 }
 
 .gradient-wave {
-  background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(255,175,117,1) 16%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, rgba(255,155,239,1) 95%);;
+  background-color: #FF9B54;
+  background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(255,175,117,1) 16%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, #ff75f6 96%);
   background-size: 4000%;
   animation: bg-animation 40s linear infinite;
 }
