--- a/src/components/nav-footer/Footer.css
+++ b/src/components/nav-footer/Footer.css
@@ -5,8 +5,8 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding-top: 40px;
-  height: 130px;
+  margin-top: 40px;
+  height: 100px;
 }
 
 .contact-icon {
