--- a/src/App.css
+++ b/src/App.css
@@ -36,20 +36,42 @@ h1 {
 
 h3 {
   font-size: 22px;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 h4 {
   font-size: 18px;
-  font-weight: 900;
+  font-weight: 700;
+  line-height: 22px;
 }
 
 p {
   font-size: 16px;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  padding: 4px 10px
+}
+
+ul {
+  padding: 25px;
+  margin-top: 40px;
+  position: absolute;
+  top: 100px;
+  width: 230px;
+}
+
 li {
+  color: #ff9244;
+  list-style: none;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
   font-size: 16px;
+  
 }
 
 span {
@@ -64,15 +86,13 @@ span {
   margin-top: 8px;
 }
 
-.gradient-wave {
-  -webkit-background-color: #FF9B54;
-  background-color: #FF9B54;
-  /* -webkit-background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(255,175,117,1) 16%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, #ff75f6 96%);
-  background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(255,175,117,1) 16%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, #ff75f6 96%);
+.rainbow {
+  -webkit-background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, #ff75f6 96%);
+  background-image:  radial-gradient(circle, rgba(255,119,140,1) 0%, rgba(196,226,115,1) 32%, rgba(134,227,190,1) 49%, rgba(116,206,255,1) 65%, rgba(137,121,255,1) 81%, #ff75f6 96%);
   -webkit-background-size: 4000%;
   background-size: 4000%;
   -webkit-animation: bg-animation 40s linear infinite;
-  animation: bg-animation 120s linear infinite; */
+  animation: bg-animation 40s linear infinite;
 }
 
 @keyframes bg-animation {
@@ -105,7 +125,7 @@ span {
 .page-content {
   max-width: 1200px;
   min-height: calc(100vh - 90px);
-  padding: 0px 25px;
+  padding: 0px 20px;
 }
 
 .background1 {
@@ -114,6 +134,44 @@ span {
 
 .background2 {
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.orange-background {
+  -webkit-background-color:  #ff9244;
+  background-color: #ff9244;
+}
+
+.menu-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 300px;
+  background: white;
+  border-radius: 0px 0px 0px 50px;
+  z-index: 4;
+}
+
+.menu-button {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 3px;
+  right: 15.5px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  z-index: 100;
+}
+
+.menu-list {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: orange;
+  height: 100px;
+  z-index: 100;
 }
 
 .grey {
@@ -128,6 +186,14 @@ span {
   color: rgba(75, 81, 91, 0.9)
 }
 
+.orange-text {
+  color: #ff9244
+} 
+
+.text-center {
+  text-align: center
+}
+
 .flexbox {
   display: flex;
   justify-content: center;
@@ -140,9 +206,18 @@ span {
   align-items: center;
 }
 
+.flexbox-column-start {
+  display: flex;
+  flex-direction: column;
+}
+
 .flexbox-row {
   display: flex;
   align-items: center;
+}
+
+.flexbox-row-start {
+  display: flex
 }
 
 .flexbox-start {
@@ -161,12 +236,12 @@ span {
   flex-wrap: wrap;
 }
 
-.span2 {
-  grid-column: 1 / span 2;
-}
-
 .no-wrap {
   white-space: nowrap;
+}
+
+.span2 {
+  grid-column: 1 / span 2;
 }
 
 .full-width {
@@ -189,6 +264,18 @@ span {
   border-radius: 5px;
 }
 
+.margin-auto {
+  margin: 0px auto
+}
+
+.margin-auto-right {
+  margin-right: auto
+}
+
+.margin-auto-left {
+  margin-left: auto
+}
+
 .max-radius {
   border-radius: 100vmax;
 }
@@ -201,16 +288,29 @@ span {
   padding: 10px
 }
 
-.img-border {
-  border-radius: 25px;
-}
-
-.shadow-1 {
+.shadow1 {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
-.shadow-2 {
+.shadow2 {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.square-icon {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 15px;
+  margin: 8px 10px 8px 2px;
+  padding: 20px
+}
+
+.text-icon {
+  height: 50px;
+  width: 50px;
+  border: 4px solid white;
+  border-radius: 100px;
+  margin: 8px
 }
 
 .design-list {
@@ -228,5 +328,6 @@ span {
 
 .account-list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-gap: 15px
 }
