--- a/src/components/ui/buttons/ScrollButton.css
+++ b/src/components/ui/buttons/ScrollButton.css
@@ -8,11 +8,14 @@
 	user-select: none;
   width: 50px;
 	height: 50px;
+	margin-top: 25px;
+	margin-bottom: 10px;
 	cursor: pointer;
 	background-color: transparent;
 	border: 4px solid white;
 	border-radius: 50%;
 	transition: 200ms;
+
 }
 
 .top-button svg {
