--- a/src/Mantine.css
+++ b/src/Mantine.css
@@ -1,5 +1,5 @@
 .mantine-Modal-modal{
-  background-color: rgb(133, 133, 133);
+  background-color: rgb(240, 239, 239)
 }
 
 .mantine-TextInput-label {
