--- a/src/App.css
+++ b/src/App.css
@@ -269,7 +269,7 @@ span {
 }
 
 .black-border {
-  border: 5px solid rgb(63, 63, 63)
+  border: 5px solid rgb(63, 63, 63);
 }
 
 .margin-auto {
@@ -384,5 +384,5 @@ span {
 
 
 .color {
-  color:rgb(236, 236, 236)
+  color: rgb(253, 81, 81)
 }
