--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ span {
   right: 0;
   bottom: 0;
   width: 250px;
-  height: 300px;
+  height: 170px;
   background: white;
   border-radius: 0px 0px 0px 50px;
   z-index: 4;
@@ -269,7 +269,7 @@ span {
 }
 
 .black-border {
-  border: 5px solid rgb(63, 63, 63);
+  border: 5px solid white;
 }
 
 .margin-auto {
