--- a/src/Mantine.css
+++ b/src/Mantine.css
@@ -2,6 +2,14 @@
   background-color: rgb(240, 239, 239)
 }
 
+
+
+.mantine-Input-input{
+  color: rgba(0, 0, 0, 0.6);
+  font-family: "Poppins";
+  padding-top: 4px;
+}
+
 .mantine-TextInput-label {
   color: white;
 }
