--- a/src/components/ui/buttons/LogButton.css
+++ b/src/components/ui/buttons/LogButton.css
@@ -1,15 +1,15 @@
 
-.contact-button {
+.log-button {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 100vmax;
-  padding: 10px 17px;
+  padding: 6px 15px;
   font-size: 20px;
   font-weight: 700;
   transition: 0.15s;
   border: none;
 }
 
-.contact-button:hover {
+.log-button:hover {
   background-color: rgba(255, 255, 255, 0.35);
   cursor: pointer;
 }
