--- a/src/App.css
+++ b/src/App.css
@@ -327,12 +327,10 @@ span {
   border-radius: 15px
 }
 
-.design-list {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  max-width: 100%;
+.product-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  row-gap: 15px;
   margin-top: 20px
 }
 
