--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,7 @@ span {
   padding-bottom: 30px;
   margin-bottom: 100px;
   box-shadow: 0 2px 4px 2px rgba(0, 0, 0, .2);
+  overflow: hidden;
 }
 
 .page-content {
@@ -137,6 +138,10 @@ span {
 
 .background2 {
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.background3 {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .orange-background {
@@ -256,6 +261,10 @@ span {
   width: 50%
 }
 
+.full-height {
+  height: 100%
+}
+
 .radius15 {
   border-radius: 15px;
 }
@@ -331,7 +340,8 @@ span {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   row-gap: 15px;
-  margin-top: 20px
+  margin-top: 20px;
+  width: 100%;
 }
 
 .order-list {
@@ -382,5 +392,5 @@ span {
 
 
 .color {
-  color: rgb(253, 81, 81)
+  color: rgba(255, 255, 255, 0.357)
 }
