--- a/src/components/ui/buttons/LogButton.css
+++ b/src/components/ui/buttons/LogButton.css
@@ -6,7 +6,7 @@
   font-size: 20px;
   font-weight: 700;
   transition: 0.15s;
-  border: none;
+  border: 3px solid white;
 }
 
 .log-button:hover {
