--- a/src/App.css
+++ b/src/App.css
@@ -215,30 +215,29 @@ span {
   align-items: center;
 }
 
-.flexbox-column-start {
-  display: flex;
-  flex-direction: column;
-}
-
 .flexbox-row {
   display: flex;
   align-items: center;
+}
+
+.space-between {
+  justify-content: space-between;
 }
 
 .flexbox-row-start {
   display: flex
 }
 
-.flexbox-start {
+.flexbox-column-start {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: flex-start;
 }
 
-.flexbox-end {
+.flexbox-column-end {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .flex-wrap {
@@ -341,12 +340,6 @@ span {
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   row-gap: 35px;
   margin-top: 20px;
-  width: 100%;
-}
-
-.order-list {
-  max-width: 600px;
-  flex: column; 
   width: 100%;
 }
 
