--- a/src/components/invoices/Invoices.css
+++ b/src/components/invoices/Invoices.css
@@ -1,17 +1,15 @@
-.order-box {
+.invoice-item {
   height: 80px;
-  max-width: 600px;
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 15px;
-  margin-top: 15px;
+  /* border: 2px solid white; */
   justify-content: space-between;
 }
 
 .order-id {
   color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.3);
-  width: 95px;
-  padding: 4px 0px;
+  padding: 4px 10px;
   margin-left: 10px;
   border-radius: 10px;
   font-weight: 700;
