--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@ h1 {
   line-height: 50px;
 }
 
+h2 {
+  font-size: 35px;
+  font-weight: 800
+}
+
 h3 {
   font-size: 22px;
   font-weight: 700;
@@ -63,14 +68,12 @@ ul {
   padding: 25px;
   margin-top: 40px;
   position: absolute;
-  top: 100px;
   width: 230px;
 }
 
 li {
   color: #FF9244;
   list-style: none;
-  margin-left: 20px;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
@@ -149,6 +152,11 @@ span {
   background-color: #FF9244;
 }
 
+.white-background {
+  -webkit-background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
 .grey-background {
   -webkit-background-color:  rgb(107, 116, 130);
   background-color: rgb(107, 116, 130);
@@ -160,7 +168,7 @@ span {
   right: 0;
   bottom: 0;
   width: 250px;
-  height: 300px;
+  height: 375px;
   background: white;
   border-radius: 0px 0px 0px 50px;
   z-index: 4;
@@ -179,11 +187,9 @@ span {
 }
 
 .menu-list {
-  position: absolute;
   right: 10px;
-  top: 10px;
+  top: 0;
   color: orange;
-  height: 100px;
   z-index: 100;
 }
 
@@ -192,7 +198,7 @@ span {
 }
 
 .light-grey-text {
-  color: rgba(75, 81, 91, 0.9)
+  color: rgba(107, 116, 130, 0.5)
 }
 
 .orange-text {
