--- a/src/components/invoices/Invoices.css
+++ b/src/components/invoices/Invoices.css
@@ -1,9 +1,10 @@
 .invoice-item {
-  height: 80px;
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 15px;
   /* border: 2px solid white; */
   justify-content: space-between;
+  padding: 15px;
+  row-gap: 15px
 }
 
 .order-id {
